	Rev 7315
	* gamewin.cc: Fixed bug #3601519 "Breaking glass displays results in guards
	  attacking" by having guards try to arrest for theft on all cases.
	Rev 7316
	* all: Alignments are an enum of Actor class, not Npc_actor.
	* gamewin.cc: Crickets are now random, instead of adding large random delays
	  to background music change. Defined private enum for BGM states.

2013-01-19	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* readnpcs.cc: Fixed bug that caused monster actors to go away instead of
	  resuming their schedule on reload.
	* schedule.*: Created an 'arrest avatar' schedule for guards summoned to
	  arrest a thieving avatar.
	* gamewin.cc: Danger music will override all but combat music. Creating 1-3
	  guards to arrest avatar instead of 1, and all of them use the new schedule
	  to arrest the avatar. Danger music is forced to play when guards approach,
	  as happens on the original. Arrest schedule is considered to be combat for
	  determining if the NPC is hostile. Guards are of chaotic alignment as they
	  are in the original.
	* actors.cc: Arrest schedule does not seek foes. Local guards call for more
	  guards. All together, this fixes bug #3599723 "guards that were called by
	  npcs stop attacking on reload".
	Rev 7309
	* actors.cc, schedule.*: Implemented graze schedule, fixing bug #3601321
	  "Graze schedule not working properly".

2013-01-19	Malignant Manor <malignantmanor@users.sourceforge.net>
	* shape_info.txt: Fix typos that caused books to run the wrong usecode. This
	  fixes bug #3601322 Exploding books in Castle of White dragon don't explode

2013-01-19	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* schedule.cc: Fixing bug #3601456 "NPCs teleport out of bed when woken up".
	  Reduced random delay for Walk_to_schedule as it caused NPCs to stand still
	  for far too long in many cases.
	* actors.*: On schedule restore, party_id hasn't been set for party members